--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         </activity>
         <activity android:name=".SuperActivity" />
         <activity android:name=".StoreActivity" />
-        <activity android:name=".StoreInfoActivity"></activity>
+        <activity android:name=".StoreInfoActivity" />
+        <activity android:name=".UserTurnInfo"></activity>
     </application>
 
 </manifest>
