--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,10 @@
         <activity android:name=".SuperActivity" />
         <activity android:name=".StoreActivity" />
         <activity android:name=".StoreInfoActivity" />
+        <activity android:name=".UserTurnInfo" />
 
         <service
-            android:name=".Services.MyFirebaseMessagingService"
+            android:name=".services.MyFirebaseMessagingService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
@@ -31,13 +32,12 @@
         </service>
 
         <service
-            android:name=".Services.MyFirebaseInstanceIdService">
+            android:name=".services.MyFirebaseInstanceIdService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
-        <activity android:name=".StoreInfoActivity" />
-        <activity android:name=".UserTurnInfo"></activity>
+
     </application>
 
 </manifest>
