--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,11 +19,23 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url "https://repo.eclipse.org/content/repositories/paho-releases/"
+    }
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    compile('org.eclipse.paho:org.eclipse.paho.android.service:1.1.1') {
+        exclude module: 'support-v4'
+    }
+    compile "org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0"
+
     compile files('libs/retrofit-2.2.0.jar')
     compile files('libs/gson-2.8.0.jar')
     compile files('libs/retrofit-2.2.0.jar')
@@ -40,7 +52,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
-
 
 
 apply plugin: 'com.google.gms.google-services'
