--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ repositories {
     maven {
         url "https://repo.eclipse.org/content/repositories/paho-releases/"
     }
+
+    maven{
+        url "https://repo.eclipse.org/content/repositories/paho-snapshots/"
+    }
 }
 
 dependencies {
