--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SuperActivity" />
-        <activity android:name=".StoreActivity" />
-        <activity android:name=".StoreInfoActivity" />
+        <activity android:name=".activities.SuperActivity" />
+        <activity android:name=".activities.StoreActivity" />
+        <activity android:name=".activities.StoreInfoActivity" />
         <activity android:name=".UserTurnInfo" />
-        <activity android:name=".MyPreferencesActivity" />
+        <activity android:name=".activities.MyPreferencesActivity" />
 
         <service
             android:name=".services.MyFirebaseMessagingService"
