--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,18 +14,18 @@
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
-        <activity android:name=".Splash">
+        <activity android:name=".activities.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SuperActivity" />
-        <activity android:name=".StoreActivity" />
-        <activity android:name=".StoreInfoActivity" />
+        <activity android:name=".activities.SuperActivity" />
+        <activity android:name=".activities.StoreActivity" />
+        <activity android:name=".activities.StoreInfoActivity" />
         <activity android:name=".UserTurnInfo" />
-        <activity android:name=".MyPreferencesActivity" />
+        <activity android:name=".activities.MyPreferencesActivity" />
 
         <service
             android:name=".services.MyFirebaseMessagingService"
